[package]
name = "game-tree"
version = "0.1.0"
authors = ["Chris Foster <cdbfoster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
util = { path = "../util" }

[dev-dependencies.util]
path = "../util"
features = ["testing"]