[package]
name = "kuhn"
version = "0.1.0"
authors = ["Chris Foster <cdbfoster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game-tree = { path = "../game-tree" }
rand = "0.8"

[dev-dependencies]
util = { path = "../util" }